# rpg_quadrotor_control

./: README.md
control/mavros_autopilot/: CMakeLists.txt  package.xml
control/position_controller/parameters/: default.yaml  fpv.yaml
control/position_controller/src/: position_controller.cpp
control/px4keepalive/: CMakeLists.txt  package.xml
control/px4keepalive/src/: px4_keepalive.py
gui/rqt_quad_control_tuning/: CMakeLists.txt  package.xml
gui/rqt_quad_control_tuning/cfg/: setControlParameters.cfg  setTrajectory.cfg
gui/rqt_quad_control_tuning/include/rqt_quad_control_tuning/: set_control_parameters.h  set_trajectory.h
gui/rqt_quad_control_tuning/launch/: rqt_quad_control_tuning.launch
gui/rqt_quad_control_tuning/src/: set_control_parameters.cpp  set_trajectory.cpp  waypoints.csv
quad_launch_files/launch/: mavros_quad.launch  real_mavros_gui.launch  real_mavros_quad.launch
sandbox/: drone_datacollector.py  drone_dataplotter.py  drone_plotter.py  ground_truth_pos_1.npy  px4_pos_1.npy  px4_vel_1.npy  target_1.npy
trajectory_planning/px4_trajectories/: CMakeLists.txt  package.xml
trajectory_planning/px4_trajectories/launch/: rpg_quadrotor_integration_px4_test.launch
trajectory_planning/px4_trajectories/src/: px4_circular_trajectory.cpp
utils/Airsim_Settings/: settings.json
utils/extra_msgs/: CMakeLists.txt  package.xml
utils/extra_msgs/msg/: ParameterCommand.msg
utils/rosbag_trigger/: CMakeLists.txt  package.xml
utils/rosbag_trigger/scripts/: rosbag_trigger.py
utils/vicon_forwarder/: CMakeLists.txt  package.xml
(+6 files in other folders)
