<?xml version="1.0"?>
<package format="2">
  <name>extra_msgs</name>
  <version>0.0.0</version>
  <description>Extra messages package</description>

  <maintainer email="201510430@post.au.dk">Kristoffer Fogh Andersen</maintainer>
  <license>MIT</license>

  <author>Kristoffer Fogh Andersen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <export>
    
  </export>
</package>